--- a/prepros.config
+++ b/prepros.config
@@ -1351,6 +1351,46 @@
         }
       },
       {
+        "file": "scss/base/elements/figure.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/elements/iframe.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/elements/img.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/elements/table.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "scss/base/reset/box-sizing.scss",
         "config": {
           "tasks": {
@@ -1369,6 +1409,146 @@
               "enable": true
             },
             "customOutput": "css/base/reset/normalize.css"
+          }
+        }
+      },
+      {
+        "file": "scss/base/typography/copy.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/accordion/accordion-group.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/accordion/accordion.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/content-row/content-row.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/form/captcha.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/form/checkbox.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/form/fieldset.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/form/form-elements.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/form/form-item.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/form/input.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/form/label.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/form/radio.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/modal/modal.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/nav/breadcrumbs.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
           }
         }
       },
@@ -1431,6 +1611,16 @@
         "file": "scss/mixins/mixins.scss",
         "config": {
           "autoCompile": false
+        }
+      },
+      {
+        "file": "scss/state/form/required.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
         }
       },
       {
