--- a/prepros.config
+++ b/prepros.config
@@ -1391,6 +1391,96 @@
         }
       },
       {
+        "file": "scss/base/form/captcha.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/form/checkbox.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/form/fieldset.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/form/form-elements.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/form/form-item.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/form/input.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/form/label.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/form/radio.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/base/nav/nav.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "scss/base/reset/box-sizing.scss",
         "config": {
           "tasks": {
@@ -1398,6 +1488,16 @@
               "enable": true
             },
             "customOutput": "css/base/reset/box-sizing.css"
+          }
+        }
+      },
+      {
+        "file": "scss/base/reset/button.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
           }
         }
       },
@@ -1443,7 +1543,57 @@
         }
       },
       {
+        "file": "scss/component/book-navigation/book-navigation.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/card/card.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "scss/component/content-row/content-row.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/emphasis/emphasis.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/field/field.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/file/file.scss",
         "config": {
           "tasks": {
             "minify-css": {
@@ -1533,6 +1683,66 @@
         }
       },
       {
+        "file": "scss/component/forum/forum.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/image-text/image-text.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/images-slider/images-slider.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/indented/indented.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/media-embed-error/media-embed-error.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/message/message-layout.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "scss/component/modal/modal.scss",
         "config": {
           "tasks": {
@@ -1544,6 +1754,86 @@
       },
       {
         "file": "scss/component/nav/breadcrumbs.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/nav/section.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/nav/tabs.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/node/node.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/progress/progress.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/search/autocomplete.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/search/facets-widget-links.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/component/when/when.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/layout/header.scss",
         "config": {
           "tasks": {
             "minify-css": {
@@ -1611,6 +1901,16 @@
         "file": "scss/mixins/mixins.scss",
         "config": {
           "autoCompile": false
+        }
+      },
+      {
+        "file": "scss/state/content-row/row-fade.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
         }
       },
       {
