--- a/prepros.config
+++ b/prepros.config
@@ -1950,6 +1950,12 @@
         "config": {
           "autoCompile": false
         }
+      },
+      {
+        "file": "scss/variables/varibales.scss",
+        "config": {
+          "autoCompile": false
+        }
       }
     ]
   }
