changes since this was cloned

--- a/prepros.config
+++ b/prepros.config
@@ -1904,6 +1904,16 @@
         }
       },
       {
+        "file": "scss/state/anon/form.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "scss/state/content-row/row-fade.scss",
         "config": {
           "tasks": {
