--- a/prepros.config
+++ b/prepros.config
@@ -1763,6 +1763,16 @@
         }
       },
       {
+        "file": "scss/component/nav/nav.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "scss/component/nav/section.scss",
         "config": {
           "tasks": {
