fixed js bundle

--- a/prepros.config
+++ b/prepros.config
@@ -992,8 +992,6 @@
         "file": "js/component/alert/alert-slider.js",
         "config": {
           "autoCompile": true,
-          "sourceMap": false,
-          "compileImported": false,
           "customOutput": "js/component/alert/alert-slider.min.js",
           "tasks": {
             "babel": {
@@ -1176,13 +1174,16 @@
       {
         "file": "js/component/when/when-toggle.js",
         "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/when/when-toggle.min.js",
           "tasks": {
             "babel": {
               "enable": true
+            },
+            "bundle-js": {
+              "enable": true
             }
-          },
-          "customOutput": "js/component/when/when-toggle.min.js",
-          "autoCompile": true
+          }
         }
       },
       {
