--- a/prepros.config
+++ b/prepros.config
@@ -955,6 +955,21 @@
         }
       },
       {
+        "file": "js/component/accordion/accordion-heading.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/accordion/accordion-heading.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "js/component/accordion/accordion.js",
         "config": {
           "autoCompile": true,
