calendar scripts, template

--- a/prepros.config
+++ b/prepros.config
@@ -1019,6 +1019,21 @@
         }
       },
       {
+        "file": "js/component/calendar/list.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/calendar/list.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "js/component/content-row/row-fade.js",
         "config": {
           "autoCompile": true,
