--- a/upanupbase.libraries.yml
+++ b/upanupbase.libraries.yml
@@ -147,10 +147,18 @@ when:
       scss-css/component/when/when.css: {}
   js:
     js/component/when/when-toggle.min.js: { minified: true }
-calendar:
+calendar_list:
   version: 1.x
+  css:
+    component:
+      scss-css/component/calendar/list.css: {}
   js:
     js/component/calendar/list.min.js: { minified: true }
+calendar_no_list:
+  version: 1.x
+  css:
+    component:
+      scss-css/component/calendar/no-list.css: {}
 indented:
   version: 1.x
   css:
@@ -186,6 +194,14 @@ book-navigation:
   css:
     component:
       scss-css/component/book-navigation/book-navigation.css: {}
+tabs:
+  version: 1.x
+  css:
+    component:
+      scss-css/component/tabs/list.css: {}
+      scss-css/component/tabs/panel.css: {}
+  js:
+    js/component/tabs/tabs.min.js: { minified: true }
 # Nav
 nav:
   version: 1.x
