--- a/upanupbase.libraries.yml
+++ b/upanupbase.libraries.yml
@@ -147,6 +147,12 @@ when:
       scss-css/component/when/when.css: {}
   js:
     js/component/when/when-toggle.min.js: { minified: true }
+calendar:
+  version: 1.x
+  css:
+    component:
+      scss-css/component/calendar/pager.css: {}
+      scss-css/component/calendar/table.css: {}
 calendar_list:
   version: 1.x
   css:
@@ -194,7 +200,7 @@ book-navigation:
   css:
     component:
       scss-css/component/book-navigation/book-navigation.css: {}
-tabs:
+tabs_component:
   version: 1.x
   css:
     component:
@@ -202,6 +208,13 @@ tabs:
       scss-css/component/tabs/panel.css: {}
   js:
     js/component/tabs/tabs.min.js: { minified: true }
+tabs_component_mobile:
+  version: 1.x
+  css:
+    component:
+      scss-css/component/tabs/mobile-list.css: {}
+  js:
+    js/component/tabs/mobile-tabs.min.js: { minified: true }
 # Nav
 nav:
   version: 1.x
