more tabs updates

--- a/prepros.config
+++ b/prepros.config
@@ -1185,6 +1185,21 @@
         }
       },
       {
+        "file": "js/component/tabs/set.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs/set.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "js/component/tabs/tabs.js",
         "config": {
           "autoCompile": true,
