--- a/upanupbase.libraries.yml
+++ b/upanupbase.libraries.yml
@@ -207,6 +207,7 @@ tabs_component:
       scss-css/component/tabs/list.css: {}
       scss-css/component/tabs/panel.css: {}
   js:
+    js/component/tabs/set.min.js: { minified: true }
     js/component/tabs/tabs.min.js: { minified: true }
 tabs_component_mobile:
   version: 1.x
@@ -214,6 +215,7 @@ tabs_component_mobile:
     component:
       scss-css/component/tabs/mobile-list.css: {}
   js:
+    js/component/tabs/set.min.js: { minified: true }
     js/component/tabs/mobile-tabs.min.js: { minified: true }
 # Nav
 nav:
