--- a/prepros.config
+++ b/prepros.config
@@ -1215,6 +1215,81 @@
         }
       },
       {
+        "file": "js/component/tabs2/click.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs2/click.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/tabs2/keyNav.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs2/keyNav.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/tabs2/required.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs2/required.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/tabs2/responsive.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs2/responsive.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/tabs2/static.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs2/static.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "js/component/view-reset/view-reset.js",
         "config": {
           "autoCompile": true,
