--- a/upanupbase.libraries.yml
+++ b/upanupbase.libraries.yml
@@ -200,23 +200,46 @@ book-navigation:
   css:
     component:
       scss-css/component/book-navigation/book-navigation.css: {}
-tabs_component:
+tabs:
   version: 1.x
   css:
     component:
-      scss-css/component/tabs/list.css: {}
       scss-css/component/tabs/panel.css: {}
   js:
-    # js/component/tabs/set.min.js: { minified: true }
-    js/component/tabs/tabs.min.js: { minified: true }
-tabs_component_mobile:
+    js/component/tabs2/click.min.js: { minified: true }
+    js/component/tabs2/keyNav.min.js: { minified: true }
+    js/component/tabs2/required.min.js: { minified: true }
+tabs.responsive:
   version: 1.x
   css:
     component:
-      scss-css/component/tabs/mobile-list.css: {}
+      scss-css/component/tabs/list--responsive.css: {}
   js:
-    # js/component/tabs/set.min.js: { minified: true }
-    js/component/tabs/mobile-tabs.min.js: { minified: true }
+    js/component/tabs2/responsive.min.js: { minified: true }
+tabs.static:
+  version: 1.x
+  css:
+    component:
+      scss-css/component/tabs/list--static.css: {}
+  js:
+    js/component/tabs2/static.min.js: { minified: true }
+# tabs_component:
+#   version: 1.x
+#   css:
+#     component:
+#       scss-css/component/tabs/list.css: {}
+#       scss-css/component/tabs/panel.css: {}
+#   js:
+#     # js/component/tabs/set.min.js: { minified: true }
+#     js/component/tabs/tabs.min.js: { minified: true }
+# tabs_component_mobile:
+#   version: 1.x
+#   css:
+#     component:
+#       scss-css/component/tabs/mobile-list.css: {}
+#   js:
+#     # js/component/tabs/set.min.js: { minified: true }
+#     js/component/tabs/mobile-tabs.min.js: { minified: true }
 # Nav
 nav:
   version: 1.x
