--- a/prepros.config
+++ b/prepros.config
@@ -1170,6 +1170,36 @@
         }
       },
       {
+        "file": "js/component/tabs/click.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs/click.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/tabs/keyNav.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs/keyNav.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "js/component/tabs/mobile-tabs.js",
         "config": {
           "autoCompile": true,
@@ -1185,10 +1215,40 @@
         }
       },
       {
+        "file": "js/component/tabs/required.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs/required.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "js/component/tabs/set.js",
         "config": {
           "autoCompile": true,
           "customOutput": "js/component/tabs/set.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/tabs/static.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/tabs/static.min.js",
           "tasks": {
             "babel": {
               "enable": true
