--- a/prepros.config
+++ b/prepros.config
@@ -1170,6 +1170,51 @@
         }
       },
       {
+        "file": "js/component/table-of-contents/attributes.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/table-of-contents/attributes.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/table-of-contents/back-to-top.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/table-of-contents/back-to-top.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/table-of-contents/nav.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/table-of-contents/nav.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "js/component/tabs/click.js",
         "config": {
           "autoCompile": true,
@@ -1339,6 +1384,36 @@
         "config": {
           "autoCompile": true,
           "customOutput": "js/component/tabs2/static.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/toc/back-to-top.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/toc/back-to-top.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "js/component/toc/nav.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/toc/nav.min.js",
           "tasks": {
             "babel": {
               "enable": true
