accordion toggle updates

--- a/prepros.config
+++ b/prepros.config
@@ -1034,6 +1034,21 @@
         }
       },
       {
+        "file": "js/component/calendar/reset.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/component/calendar/reset.min.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "js/component/content-row/row-fade.js",
         "config": {
           "autoCompile": true,
